# MOVideoPlayer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-windows.yml
scripts/: check-windows.sh  fetch-mpv.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json  settings.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  mod.rs  playback.rs  settings_cmds.rs  subtitles.rs  tracks.rs  window_cmds.rs
src-tauri/src/mpv/: ipc.rs  mod.rs  process.rs  protocol.rs
src-tauri/src/persistence/: mod.rs  models.rs  store.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/window/: chrome.rs  embed.rs  mod.rs  vibrancy.rs
src/components/dnd/: DropZone.tsx  OpenUrlDialog.tsx
src/components/overlay/: CenterTransport.tsx  ChapterPanel.tsx  EmptyState.tsx  FloatingPanel.tsx  OverlayLayer.tsx  Timeline.tsx  Toolbar.tsx
src/components/overlay/panels/: AspectRatioPanel.tsx  AudioTrackPanel.tsx  ColorPanel.tsx  LoopPanel.tsx  RotatePanel.tsx  SpeedPanel.tsx  SubtitleSearchPanel.tsx  SubtitlesMenu.tsx  (+7 more)
src/components/settings/: GeneralTab.tsx  InterfaceTab.tsx  OnlineSubsTab.tsx  PlaybackTab.tsx  SettingsWindow.tsx  ShortcutsTab.tsx
src/components/titlebar/: CustomTitlebar.tsx
src/lib/: languages.ts  mpvEvents.ts  subtitleQuery.ts  tauriCommands.ts  types.ts
src/lib/shortcuts/: actions.ts  registry.ts
src/store/: playerStore.ts  settingsStore.ts  uiStore.ts
src/styles/: global.css
